# release-manager

./: .gitignore  .release-manager.toml  .vsts-ci.yml  Cargo.toml  README.md
.circleci/: config.yml
.docker/: builder.Dockerfile  mac.Dockerfile  musl-build.sh  musl-linux.Dockerfile  other-builder.Dockerfile  windows.Dockerfile
src/crom_lib/: lib.rs
src/crom_lib/commands/: mod.rs  versions.rs
src/crom_lib/requests/: mod.rs
src/manager_lib/: config.rs  errors.rs  file.rs  git.rs  http.rs  lib.rs  logging.rs  repo.rs  version_manager.rs
src/manager_lib/commands/: artifactory.rs  local.rs  mod.rs  project.rs  versions.rs
src/manager_lib/commands/artifactory/: api.rs  builder.rs  mod.rs
src/manager_lib/commands/github/: api.rs  mod.rs
