[package]
name = "release-manager"
version = "0.1.9"
authors = ["Ethan Hall <ethan@ehdev.io>"]

[lib]
name = "manager_lib"
path = "src/manager_lib/lib.rs"

[dependencies]
log = "0.4.1"
fern = { version = "0.5", features = ["colored"] }
clap = "2.29.2"
futures = "0.1"
hyper = "0.11"
tokio-core = "0.1"
regex = "0.2"
colored = "1.6"
chrono = "0.4"
git2 = { version  ="0.6", default-features = false }
json = "*"
toml = "0.4"
toml_edit = "0.1"
semver = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.6"
hyper-tls = "0.1.2"
rust-ini = "0.10.3"
mime_guess = "2.0.0-alpha.4"
mime = "0.3.5"
openssl-probe = "0.1.2"
tar = "0.4"
glob = "0.2"
rust-crypto = "0.2.36"
indicatif = "0.9.0"